# ai-weekly-baby-tracker

./: README.md  docker-compose.yml  my_agent_prd.md  render.yaml  start.sh
backend/: Dockerfile  deploy.sh  env_example.txt  main.py  pyproject.toml  requirements.txt  seed_milestones.py
frontend/: env.example  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.tsx
frontend/src/components/: BabyProfileForm.tsx  DevelopmentSummary.tsx  RecipeForm.tsx  RecipeResults.tsx  UserProfileForm.tsx  WeekendPlannerForm.tsx  WeekendResults.tsx  WeeklyCheckIn.tsx
frontend/src/types/: recipe.ts
