[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "weekly-baby-genie-backend"
version = "1.0.0"
description = "AI-powered baby development tracking backend using LangGraph"
authors = [{name = "Weekly Baby Genie Team"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "pydantic==2.5.0",
    "python-multipart==0.0.6",
    "langchain-openai==0.1.0",
    "langchain-core==0.1.0",
    "python-dotenv==1.0.0",
]

[project.scripts]
weekly-baby-genie = "main:app"

[tool.setuptools]
packages = ["weekly_baby_genie_backend"]
